tests/ui/variants/variant-size-differences.stderr
error: enum variant is more than three times larger (1024 bytes) than the next largest
  --> $DIR/variant-size-differences.rs:5:5
   |
LL |     VBig([u8; 1024]),
   |     ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/variant-size-differences.rs:1:9
   |
LL | #![deny(variant_size_differences)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

